--- a/public/index.html
+++ b/public/index.html
@@ -94,8 +94,8 @@
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script>
         // Cambiar esta URL por la de tu servidor desplegado
-        const SERVER_URL = window.location.origin; // Usa el mismo servidor
-        // const SERVER_URL = 'https://tu-servidor.render.com'; // Para producción
+        //const SERVER_URL = window.location.origin; // Usa el mismo servidor
+        const SERVER_URL = 'https://examen-xza1.onrender.com'; // Para producción
         
         const socket = io(SERVER_URL);
         const likesCountElement = document.getElementById('likesCount');
